basket delivery options block added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
          <a href="tel:+79639998899">+7 963 999 88 99</a>
-        <h2>Выберите пункт доставки:</h2>
+        <h2>Выберите способ доставки:</h2>
             <batton>Заказать звонок</batton>
         </div>
     </header>
