--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <a href="tel:+79639998899">+7 963 999 88 99</a>
         <h2>Выберите способ доставки:</h2>
             <batton>Заказать звонок</batton>
-            <batton>New batton</batton>
+            <batton>Завершить</batton>
         </div>
     </header>
     
