--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2>Выберите способ доставки:</h2>
             <batton>Заказать звонок</batton>
             <batton>New batton</batton>
+            <batton>завершение</batton>
         </div>
     </header>
     
