--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <a href="tel:+79639997799">+7 963 999 77 99</a>
 =======
        
-        <h2>Выберите способ доставки:</h2>
+        <h2>Выберите пункт доставки:</h2>
             <batton>Заказать звонок</batton>
 
             <batton>New batton</batton>
