--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div>
 
-         <a href="tel:+79639997799">+7 963 999 77 99</a>
+         <a href="tel:+79639997799" title="Номер телефона">+7 963 999 77 99</a>
       
         <h2>Выберите пункт доставки:</h2>
             <batton>Заказать звонок</batton>
