phone link canged

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>Выберите способ доставки:</h2>
 =======
 
-         <a href="tel:+79639997799">+7 963 999 77 99</a>
+         <a href="tel:+79639997799"target="blanc">+7 963 999 77 99</a>
       
         <h2>Выберите пункт доставки:</h2>
             <batton>Заказать звонок</batton>
