--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
         <div>
             Наш e-mail: <a href="mailyo:email@mail.ru">mail@mail.ru</a>
         </div>
-        <div>
-<<<<<<< HEAD
+        HEAD
          <a href="tel:+79639998899">+7 963 999 88 99</a>
-        <h2>Выберите способ доставки:</h2>
-=======
+        <h2>Выберите способ доставки
 
          <a href="tel:+79639997799" title="Номер телефона"target="blanc">+7 963 999 77 99</a>
       
